log
Sun 07 May 2023 11:28:17 PM UTC: 
 heap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:37:9: error: unused variable ‘pq’ [-Werror=unused-variable]
   37 |   Heap* pq = (Heap*) malloc(sizeof(Heap));
      |         ^~
heap.c:39:1: error: control reaches end of non-void function [-Werror=return-type]
   39 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
8195711
